migrating to cnd file utilities